--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "ember-cli-dotenv": "^3.1.0",
     "ember-cli-htmlbars": "^4.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-moment-shim": "^3.8.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
+    "ember-composable-helpers": "^4.0.0",
     "ember-data": "~3.18.0",
     "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
@@ -44,10 +46,12 @@
     "ember-intl": "^5.1.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-moment": "^8.0.0",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.18.0",
     "ember-template-lint": "^2.6.0",
+    "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-ember": "^8.4.0",
@@ -64,6 +68,10 @@
     "edition": "octane"
   },
   "dependencies": {
-    "phoenix": "^1.5.3"
+    "autolink-js": "^1.0.2",
+    "ember-lazy-image": "https://github.com/mcfiredrill/ember-lazy-image#update-dependencies",
+    "emojione": "git://github.com/mcfiredrill/emojione#animated-emoji",
+    "phoenix": "^1.5.3",
+    "textcomplete": "^0.18.1"
   }
 }
